--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,22 @@
 {
-  "name": "Stok Pintar Manajemen",
+  "name": "Stok Pintar",
   "short_name": "StokPintar",
-  "description": "Aplikasi manajemen stok produk dengan kategori NARITA, VR, KUDUS, dan LAIN",
-  "start_url": "/",
+  "description": "Manajemen Stok Produk - NARITA, VR, KUDUS, LAIN",
+  "start_url": ".",
+  "scope": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2633/2633807.png",
+      "src": "https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f4e6.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2633/2633807.png",
+      "src": "https://cdn.jsdelivr.net/npm/emoji-datasource-apple/img/apple/64/1f4e6.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
